_sass/generic.overrides.scss
/*-------------------
  generic overrides
-------------------*/

.tile,
.notificationBar,
.notificationList,
.container--article {
    //box-shadow: 0 1px 0 0 rgba(7, 7, 33, .15);
    box-shadow: none;
}

// .header {
//     box-shadow: 0 1px 0 0 rgba(7, 7, 33, .15);
// }

.tile--fullyTransparent {
    box-shadow: none;
}

.button, 
.textInput {
	border-radius: 4px;
}

.h1,
.h2,
.headingL,
.headingXL,
.headingXXL,
h1,
h2 {
    letter-spacing: -0.3px;
}

p {
    font-size: inherit;
    color: inherit;
    font-weight: inherit;
    margin: 0;
    padding: 0;
}

.rppb-plan-button {
    @include sm {
        margin-left: $half-gutter !important;
    }
}

.content {
    padding: 0;
    background-color: $ns-white;
    
    @include md {
        min-height: calc(100vh - 140px);
    }
}

.container--article {
    @include sm-ex {
        padding-top: 1.375rem;
    }
}

.checkbox__label:before {
    background-color: $ns-white;
    border-radius: 2px;
}

.richText p {
    margin: 0;
}

.overlay__contentPositioner {
    @extend .a;
    @extend .a-fi-right;
    @extend .a-dur-350;

    @include sm-max {
        margin: auto;
        width: 100%;
        .overlay__close {
            position: fixed;
        }
    }
}

.overlay .darkener {
    @include sm-max {
        background-color: $ns-white;
    }
}




// extra ovr-classes
// ------------------------------------------
.ovr-container {
    margin: 0 0 $half-gutter;

    @include sm {
        margin: $half-gutter; 
    }
    @include lg {
        margin: $gutter auto;
    }
}

.ovr-grid__unit {
    padding-top: 0;
    padding-bottom: 0;
    
    @include md-max {
        margin-bottom: $half-gutter;

        &:last-child {
            margin-bottom: 0;
        }
    }
}

